<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZMO</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">知家-ZMO</string>
    <string name="tool_find_text">发现</string>
    <string name="tool_im_text">人脉</string>
    <string name="tool_my_text">我的</string>
    <string name="sun">星期天</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wen">星期三</string>
    <string name="thi">星期四</string>
    <string name="fri">星期五</string>
    <string name="sar">星期六</string>
    <string name="en_sun">SUNDAY</string>
    <string name="en_mon">MONDAY</string>
    <string name="en_tue">TUESDAY</string>
    <string name="en_wen">WEDNESDAY</string>
    <string name="en_thi">THURSDAY</string>
    <string name="en_fri">FRIDAY</string>
    <string name="en_sar">SATURDAY</string>
    <string name="video_title_str">视频</string>
    <string name="tourte_title_str">导师</string>
    <!-- <string name="tourte_fans_format_str">%1$s&#160;&#160;</string> -->
    <string name="tourte_fans_format_str">%1$d粉丝</string>
    <string name="tutor_lable_format_str">导师：%1$s</string>
    <string name="course_lable_format_str">标签：%1$s</string>
    <string name="course_desp_format_str">课程简介：%1$s</string>
    <string name="activity_theme_format_str">主题：%1$s</string>
    <string name="activity_address_format_str">地点：%1$s</string>
    <string name="course_price_format_str">价格：%1$d元</string>
    <string name="activity_time_format_str">时间：%1$s</string>
    <string name="video_time_format_str">时长：%1$s</string>
    <string name="login_btn_default_str">登录</string>
    <string name="login_btn_success_str">登录成功</string>
    <string name="login_btn_error_str">登录失败</string>
    <string name="register_btn_default_str">注册</string>
    <string name="register_btn_success_str">注册成功</string>
    <string name="register_btn_error_str">注册失败</string>
    <string name="email_tab_lable">邮箱</string>
    <string name="mobile_tab_lable">手机</string>
    <string name="forget_pwd_lable">忘记密码？</string>
    <string name="login_platform_lable">使用第三方登录</string>
    <string name="weibo_login_lable">微博登录</string>
    <string name="qq_login_lable">QQ登录</string>
    <string name="weixin_login_lable">微信登录</string>
    <string name="get_code_lable">获取验证码</string>
    <string name="ok_str">确定</string>
    <string name="cancel_str">取消</string>
    <string name="error_str">失败</string>
    <string name="success_str">成功</string>
    <string name="order_id_format_str">订单号：%1$s</string>
    <string name="order_price_format_str">实付数：%1$d</string>
    <string name="pic_photograph_str">选择相册</string>
    <string name="pic_camera_str">拍照上传</string>
    <string name="tel_format_lable">您的手机号码为：%1$s</string>
    <string name="email_format_lable">您的邮箱为：%1$s</string>
    <string name="set_title_str">设置</string>
    <string name="pwd_manager_title">密码管理</string>
    <string name="pwd_set_new_pwd_tip_str">验证成功，请设置您的新密码</string>
    <string name="order_payed_lable">已支付</string>
    <string name="order_unpayed_lable">未支付</string>
    <string name="order_close_lable">交易关闭</string>
    <string name="save_course_lable">课程</string>
    <string name="save_activity_lable">活动</string>
    <string name="save_tutor_lable">导师</string>
    <string name="activity_online_str">线上</string>
    <string name="activity_offline_str">线下</string>
    <string name="activity_price_format_str">价格：%1$s</string>
    <string name="activity_count_format_str">名额：%1$s</string>
    <string name="hot_lable">热门</string>

</resources>