<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:gravity="center"
        android:background="@color/color_title_bg"
        android:orientation="horizontal" >

        <TextView
            style="@style/tool_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_title"
            android:textSize="18dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frament_view_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#DEDEDE"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/color_tool_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/find_btn_id"
            style="@style/tool_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tool_find_text"
            android:textColor="@color/color_tool_text_select" />

        <TextView
            android:id="@+id/im_btn_id"
            style="@style/tool_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tool_im_text" />

        <TextView
            android:id="@+id/my_btn_id"
            style="@style/tool_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tool_my_text" />
    </LinearLayout>

</LinearLayout>