<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dedede_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/hot_tab_id"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@color/color_535353"
            android:gravity="center"
            android:text="@string/hot_lable"
            android:textColor="@android:color/white" >
        </TextView>
        
          <TextView
            android:id="@+id/video_tab_id"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@color/color_535353"
            android:gravity="center"
            android:text="@string/video_title_str"
            android:textColor="@android:color/white" >
        </TextView>

        <TextView
            android:id="@+id/offline_tab_id"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@color/color_535353"
            android:gravity="center"
            android:text="@string/activity_offline_str"
            android:textColor="@android:color/white" >
        </TextView>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

</LinearLayout>