<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dip"
    android:background="@color/color_tool_bg"
    android:paddingTop="20dip"
    android:paddingRight="15dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mobile_tab_id"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@color/color_535353"
            android:gravity="center"
            android:text="@string/mobile_tab_lable"
            android:textColor="@android:color/white" >
        </TextView>

        <TextView
            android:id="@+id/email_tab_id"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@color/color_535353"
            android:gravity="center"
            android:text="@string/email_tab_lable"
            android:textColor="@android:color/white" >
        </TextView>
    </LinearLayout>
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dip"
        android:id="@+id/pwd_view_id"
        android:textColor="@color/color_font1"
        android:text="您的手机号码：135****2222"
        android:layout_marginTop="30dip"/>

    <LinearLayout
        android:id="@+id/get_code_linearlayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.zmo.view.ZmoEditText
            android:id="@+id/code_edit_id"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:background="@drawable/post_bg"
            android:layout_weight="1" />

        <Button
            android:id="@+id/get_code_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:textSize="14dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="@android:color/white"
            android:background="@color/color_555555"
            android:text="@string/get_code_lable" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:text="下一步"
        android:id="@+id/next_step_btn_id"
        android:textColor="@android:color/white"
        android:background="@color/color_535353"
        android:textSize="14dip" />

</LinearLayout>